# C-

./: swap  swap.cpp
OSG/basic_geometry/: CMakeLists.txt  main.cpp
SimpleCppRest/: CMakeLists.txt  main.cpp
cpprest/crud/: CMakeLists.txt  Main.h  main.cpp
cpprest/crud2/: CMakeLists.txt  Main.h  main.cpp
cpprest/nlohman/: CMakeLists.txt  main.cpp
cpprest/nlohmann/: CMakeLists.txt  main.cpp
gstreamer/: audio-PCMU-2  commands.txt  createpipeline  createpipeline.c  demuxer  demuxer.c  first  first.c  mp4  mp4.c  myrecord.avi  playlist.m3u8  playlist.m3u8.7OFI1Z  second  second.c  segment00000.ts  segment00037.ts  segment00038.ts  segment00039.ts  segment00040.ts  segment00041.ts  segment00520.ts  segment00521.ts  segment00522.ts  segment00523.ts  segment00524.ts  segment40755.ts  segment40756.ts  segment40757.ts  segment40758.ts  segment40759.ts  stream  stream.c  test  test.c  third  video-H264-1
gstreamer/basic2.c/: CMakeLists.txt
gstreamer/untitled/: CMakeLists.txt
katis/: aaah  aaah.cpp  bijele  bijele.cpp  bijele2  chicken  chicken.cpp  chicken2  chicken2.cpp  hissing  hissing.cpp
learning/: cin  cin.cpp  circles  circles.cpp  strings  strings.cpp  ternary  ternary.cpp
learning/classes/: Fibonacci  Fibonacci.cpp  Fibonacci.h  GradeBook  GradeBook.cpp  GradeBook.h
learning/classes/Time/: Time.cpp  Time.h
learning/data/: arr1  arr1.cpp  pointer  pointer1.cpp  pointerarr  pointerarr.cpp  strings  strings.cpp
learning/functions/: fun1  fun1.cpp  recurcive  recursive.cpp  ref  ref.cpp
opencv/: start  start.cpp
opencv/brightness/: bright  brightimg.cpp  brightvideo  brightvideo.cpp
opencv/contrast/: contrastimg  contrastimg.cpp  contrastvid  contrastvid.cpp
opencv/dilate/: dilateimage  dilateimage.cpp
opencv/erode/: erodeimg  erodeimg.cpp  erodevideo  erodevideo.cpp
opencv/filter/: gblurimage  gblurimage.cpp  gblurvideo  gblurvideo.cpp  hblurimage  hblurimage.cpp  hblurvideo
opencv/histogram/: equalizeColorImg  equalizeColorImg.cpp  equalizeVid  equalizeVid.cpp  equalizeimg  equalizeimg.cpp
opencv/invert/: invertimage  invertimage.cpp
opencv/topic1/: blankimage  blankimage.cpp  display  display.cpp  first  first.cpp
opencv/trackbar/: trackbarimage  trackbarimage.cpp
opencv/video/: play  play.cpp  save  save.cpp  saveimg  saveimg.cpp  savevideo  savevideo.cpp  webcam  webcam.cpp
osg/: CMakeLists.txt  main.cpp
osg_project/: CMakeLists.txt  main.cpp
play_vedio/: CMakeLists.txt  main.cpp
pointers/: passbyreference  passbyreference.cpp  passbyvalue  passbyvalue.cpp  pointer1  pointer1.cpp  sizeof  sizeof.cpp
sorts/bubblesort/: bubblesort  bubblesort.cpp  bubblesort.h
sorts/insertionsort/: insertionsort  insertionsort.cpp  insertionsort.h
sorts/mergesort/: mergesort  mergesort.cpp  mergesort.h  test  test.cpp
sorts/quicksort/: quicksort  quicksort.cpp  quicksort.h
sorts/selectionsort/: selectionsort  selectionsort.cpp
structures/linear/: linear  linear.cpp
test-maps/: CMakeLists.txt  main.cpp  main.qml  main.qrc
test-maps/Debug/: test-maps
ui-test/: CMakeLists.txt  window.h
videoplayer/: CMakeLists.txt  main  main.cpp
